--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,1 +1,32 @@
 /* variables.scss */
+
+:root {
+  --bg-light-1: ;
+  --bg-light-2: ;
+  --bg-light-3: ;
+  --ink-on-light-1: ;
+  --ink-on-light-2: ;
+  --ink-on-light-3: ;
+  --border-ink-on-light-1: ;
+  --border-ink-on-light-2: ;
+  --border-ink-on-light-3: ;
+  --bg-info-on-light: ;
+  --bg-success-on-light: ;
+  --bg-warning-on-light: ;
+  --bg-danger-on-light: ;
+  --ink-info-on-light: ;
+  --ink-success-on-light: ;
+  --ink-warning-on-light: ;
+  --ink-danger-on-light: ;
+  --border-ink-info-on-light: ;
+  --border-ink-success-on-light: ;
+  --border-ink-warning-on-light: ;
+  --border-ink-danger-on-light: ;
+  
+  --type-scale-down-2: .85em;
+  --type-scale-down-1: .95em;
+  --type-scale-base: 1em;
+  --type-scale-up-1: 1.25em;
+  --type-scale-up-2: 1.5em;
+  --type-scale-up-3: 1.75em;
+}
