--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,15 +1,16 @@
 /* variables.scss */
 
 :root {
-  --bg-light-1: ;
-  --bg-light-2: ;
-  --bg-light-3: ;
-  --ink-on-light-1: ;
-  --ink-on-light-2: ;
-  --ink-on-light-3: ;
-  --border-ink-on-light-1: ;
-  --border-ink-on-light-2: ;
-  --border-ink-on-light-3: ;
+  --bg-light-1: hsl(0, 0%, 100%);
+  --bg-light-2: hsl(0, 0%, 90.2%);
+  --bg-light-3: hsl(0, 0%, 80%);
+  --ink-on-light-1: hsl(0, 0%, 20%);
+  --ink-on-light-2: hsl(0, 0%, 30.2%);
+  --ink-on-light-3: hsl(0, 0%, 40%);
+  --border-ink-on-light-1: hsl(0, 0%, 25.1%);
+  --border-ink-on-light-2: hsl(0, 0%, 35.29%);
+  --border-ink-on-light-3: hsl(0, 0%, 45.1%);
+  /*
   --bg-info-on-light: ;
   --bg-success-on-light: ;
   --bg-warning-on-light: ;
@@ -22,6 +23,16 @@
   --border-ink-success-on-light: ;
   --border-ink-warning-on-light: ;
   --border-ink-danger-on-light: ;
+  */
+  --bg-1: var(--bg-light-1);
+  --bg-2: var(--bg-light-2);
+  --bg-3: var(--bg-light-3);
+  --ink-1: var(--ink-on-light-1);
+  --ink-2: var(--ink-on-light-2);
+  --ink-3: var(--ink-on-light-3);
+  --border-ink-1: var(--border-ink-on-light-1);
+  --border-ink-2: var(--border-ink-on-light-2);
+  --border-ink-3: var(--border-ink-on-light-3);
   
   --type-scale-down-2: .85em;
   --type-scale-down-1: .95em;
