--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,16 +11,16 @@
   --border-ink-on-light-2: hsl(0, 0%, 35.29%);
   --border-ink-on-light-3: hsl(0, 0%, 45.1%);
   /*
-  --bg-info-on-light: ;
-  --bg-success-on-light: ;
+  --bg-info-on-light: hsl(240, 100%, 65.1%);
+  --bg-success-on-light: hsl(120, 100%, 94.9%);
   --bg-warning-on-light: ;
   --bg-danger-on-light: ;
-  --ink-info-on-light: ;
-  --ink-success-on-light: ;
+  --ink-info-on-light: hsl(240, 100%, 35.1%);
+  --ink-success-on-light: hsl(120, 100%, 25.1%);
   --ink-warning-on-light: ;
   --ink-danger-on-light: ;
-  --border-ink-info-on-light: ;
-  --border-ink-success-on-light: ;
+  --border-ink-info-on-light: hsl(240, 49.8%, 50%);
+  --border-ink-success-on-light: hsl(120, 29.92%, 50.2%);
   --border-ink-warning-on-light: ;
   --border-ink-danger-on-light: ;
   */
