--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,1 +1,34 @@
 /* base.scss */
+
+body {
+  font-family: var(--font-family-base);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: var(--line-height-base);
+  color: var(--ink-1);
+  background-color: var(--bg-1);
+  
+  @media (orientation: landscape) and (min-width: 768px){
+    font-size: 1.3rem;
+  }
+}
+
+a {
+  color: var(--link-ink);
+  
+  &:hover,
+  &:focus {
+    color: var(--link-hover-ink);
+  }
+  
+  strong {
+    color: inherit;
+  }
+}
+
+img,
+video,
+iframe {
+  max-inline-size: 100%;
+  block-size: auto;
+}
