--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,1 +1,176 @@
 /* typography.scss */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-block-start: var(--spacer-base);
+  margin-block-end: .25em;
+  font-weight: 700;
+  line-height: var(--line-height-down-1);
+}
+
+h1 {
+  margin-block-start: 0;
+  font-size: var(--type-scale-up-3);
+}
+
+h2 {
+  font-size: var(--type-scale-up-2);
+}
+  
+h3,
+h4,
+h5,
+h6 {
+  font-size: var(--type-scale-up-1);
+}
+
+p {
+  margin-block-start: 0;
+  margin-block-end: var(--spacer-base);
+  font-size: var(--type-scale-base);
+}
+
+ul,
+ol {
+  margin-block-start: 0;
+  margin-block-end: var(--spacer-base);
+  
+  li {
+    margin-block-end: .75em;
+  }
+}
+
+dl {
+  margin-block-start: 0;
+  margin-block-end: var(--spacer-base);
+  
+  dt {
+    font-weight: bolder;
+  }
+  
+  dd {
+    margin-inline: 0;
+    margin-block-end: .75em;
+  }
+}
+
+hr {
+  position: relative;
+  margin-block: var(--spacer-up-1);
+  border: 0;
+  border-block-start: 1px solid var(--border-ink-1);
+}
+
+abbr {
+  font-size: var(--type-scale-down-1);
+  color: inherit;
+  text-transform: uppercase;
+
+  &[title] {
+    cursor: help;
+    border-block-end: 1px dotted var(--border-ink-1);
+  }
+}
+
+figure {
+  margin-inline: 0;
+  margin-block-start: 0;
+  margin-block-end: var(--spacer-base);
+  
+  figcaption {
+    font-size: var(--type-scale-down-2);
+    line-height: var(--line-height-down-1);
+    color: var(--ink-2);
+  }
+}
+
+blockquote {
+  padding-inline-start: 1em;
+  margin-inline: 0;
+  font-size: var(--type-scale-down-1);
+  color: var(--ink-2);
+  border-inline-start: .25em solid var(--border-ink-2);
+  
+  p:last-child {
+    margin-block-end: 0;
+  }
+}
+
+code {
+  font-family: var(--font-family-monospace);
+  font-size: var(--type-scale-down-1);
+  color: var(--ink-2);
+}
+
+pre {
+  margin: 0;
+  display: block;
+  overflow: auto;
+  color: var(--ink-2);
+}
+
+.highlight {
+  padding: var(--spacer-base);
+  margin-inline: 0;
+  margin-block-end: var(--spacer-base);
+  background-color: var(--bg-2);
+  border-radius: var(--border-radius-base)
+  
+  .highlight {
+    padding: 0;
+  }
+}
+
+.rouge-table {
+  font-size: 100%;
+
+  &,
+  td,
+  th {
+    border: 0;
+  }
+
+  .gutter {
+    vertical-align: top;
+    user-select: none;
+    opacity: .25;
+  }
+}
+
+table {
+  margin-block-end: var(--spacer-base);
+  width: 100%;
+  border: 0 solid var(--border-ink-1);
+  border-collapse: collapse;
+}
+
+td,
+th {
+  padding: .5em;
+  border-style: solid;
+  border-width: 0;
+  border-bottom-width: 1px;
+}
+
+th {
+  text-align: left;
+}
+
+thead th {
+  border-block-end-color: currentColor;
+}
+
+
+
+
+
+
+
+
+
+
+
