--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,7 +69,7 @@
   
   --border-radius-base: .25em;
   
-  --font-base: sans-serif;
-  --font-monospace: monospace;
-  --font-ui: sans-serif;
+  --font-family-base: sans-serif;
+  --font-family-monospace: monospace;
+  --font-family-ui: sans-serif;
 }
