--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/asset/apple-touch-icon.png' | relative_url }} ">
   </head>
   
-  <body>
+  <body class="container">
     <header>
       <a href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a>
     </header>
