--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -118,7 +118,7 @@ pre {
   margin-inline: 0;
   margin-block-end: var(--spacer-base);
   background-color: var(--bg-2);
-  border-radius: var(--border-radius-base)
+  border-radius: var(--border-radius-base);
   
   .highlight {
     padding: 0;
