--- a/_sass/_utility.scss
+++ b/_sass/_utility.scss
@@ -2,7 +2,7 @@
 
 .container {
   max-inline-size: 35em;
-  padding-inline: var(--spacer-base);
+  padding-inline: var(--spacer-up-1);
   margin-inline: auto;
 }
 
