--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         {{ page.title }} &middot; {{ site.title }}
       {% endif %}
     </title>
-    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ page.content }}{% endif %}">
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% endif %}">
     
     <link rel="stylesheet" href="{{ '/assets/stylesheet.css' | relative_url }}">
     
