--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -41,8 +41,13 @@ ol {
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
   
+  ul,
+  ol {
+    margin-block-start: .5em;
+  }
+  
   li {
-    padding-inline-start: .5em;
+    padding-inline-start: 1em;
     margin-block-end: .75em;
   }
 }
