--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -54,11 +54,11 @@ ol {
 }
 
 ul li {
-  list-style: disc inside;
+  list-style: disc;
 }
 
 ol li {
-  list-style: decimal inside;
+  list-style: decimal;
 }
 
 /*
