--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -36,29 +36,21 @@ p {
 
 ul,
 ol {
-  list-style: none;
   padding: 0;
+  margin-block-start: var(--spacer-base);
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
   
   ul,
   ol {
-    padding-inline-start: 1em;
+    padding-inline-start: .5em;
     margin-block-start: .5em;
   }
   
   li {
     padding-inline-start: 1em;
-    margin-block-end: .75em;
+    margin-block-end: var(--spacer-base);
   }
-}
-
-ul li {
-  list-style: disc;
-}
-
-ol li {
-  list-style: decimal;
 }
 
 /*
