--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -37,7 +37,7 @@ p {
 ul,
 ol {
   padding: 0;
-  margin-block-start: var(--spacer-base);
+  margin-inline-start: var(--spacer-base);
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
   
