--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -37,7 +37,7 @@ p {
 ul,
 ol {
   padding: 0;
-  margin-inline-start: var(--spacer-base);
+  margin-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
   
@@ -48,7 +48,6 @@ ol {
   }
   
   li {
-    padding-inline-start: 1em;
     margin-block-end: var(--spacer-base);
   }
 }
@@ -58,6 +57,7 @@ ol {
   list-style-type: none;
   
   li::before {
+    padding-inline-end: .5em;
     counter-increment: tiered-numb-list;
     content: counters(tiered-numb-list, ".");
   }
