--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -40,11 +40,12 @@ ol {
   margin-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
+  list-style: none;
   
   ul,
   ol {
     padding-inline-start: var(--spacer-base);
-    margin-block-start: .5em;
+    //margin-block-start: .5em;
   }
   
   li {
@@ -52,9 +53,16 @@ ol {
   }
 }
 
+ul {
+  list-style-type: disc;
+  
+  li::before {
+    padding-inline-end: .5em;
+  }
+}
+
 ol {
   counter-reset: tiered-numb-list;
-  list-style-type: none;
   
   li::before {
     padding-inline-end: .5em;
