--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -44,8 +44,7 @@ ol {
   
   ul,
   ol {
-    padding-inline-start: var(--spacer-base);
-    //margin-block-start: .5em;
+    margin-inline-start: var(--spacer-base);
   }
   
   li {
