--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -40,7 +40,7 @@ ol {
   margin-inline-start: 0;
   margin-block-start: 0;
   margin-block-end: var(--spacer-base);
-  list-style: none;
+  list-style-type: none;
   
   ul,
   ol {
